[project]
name = "divio_docs_parser"
version = "0.0.1"
authors = [
    { name="Denperidge", email="denperidge@gmail.com" },
]
description = "Turn all the markdown files in your repos into one big, divio structrured documentation"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "GitPython",
    "python-slugify",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Documentation",
]

[project.urls]
"Homepage" = "https://github.com/Denperidge-Redpencil/divio-docs-parser"
"Bug Tracker" = "https://github.com/Denperidge-Redpencil/divio-docs-parser/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"